--- a/app/index.html
+++ b/app/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/vendor/bootstrap.css">
+    <link rel="stylesheet" href="css/custom/main.css">
   </head>
 
   <body class="row" ng-controller = "PersonalDetailsController">
-    <form class="navbar-form navbar-left" role="search">
+    <form ng-submit="search()" class="navbar-form navbar-left" role="search">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
+        <input ng-model="userName" type="text" class="form-control" placeholder="Search">
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
 
 
-    <div class="panel panel-default col-md-6 col-md-offset-3">   
+    <div ng-hide class="panel panel-default col-md-6 col-md-offset-3">   
       <div class="panel-heading">
 
       </div>  
@@ -33,7 +34,7 @@
           <img class="img-circle" ng-src= "{{user.avatar_url}}">
         </div>
       </div>
-      <div class="panel-footer">&copy Dewunmi & Bread-face</div>
+      <div class="panel-footer">&copy Dewunmi & Jesmine</div>
     </div>
     
     <script src="js/vendor/angular.js"></script>
